recommendation for MAVEN_OPTS