@@ -26,7 +26,8 @@ Archetypes are deployed to Backbase Expert Services' Maven repository at
 ##Important Notes
 1. We have separated aggregator and parent POMs since 5.5.0.0 so make sure to understand this before making any changes to archetypes. Purpose of this was to separate lifecycle for each archetype if needed and to make sure Maven site plugin works correctly by aggregating reports from all modules.
 2. From version **5.5.0.0** we're using **JDK 7** as the default option due to the latest version of embedded Jetty which requires it and due to LP specific we also require **Maven 3.1.1** as the minimal version. Also, make sure that your Maven is using correct version of the JDK. You can check all of these by typing <pre>mvn --version</pre> in your command prompt.
-3. From version **5.5.0.0** we're using **NodeJS** which needs to be at least 0.10.x, so make sure you have it and if not, please upgrade node and npm as well. For mobile development, 0.10.20 is the minimal version that Titanium requires, so bets to grab latest version available. 
+3. Some of the archetypes are memory intensive during build process so adjust your JVM memory settings for Maven through setting MAVEN_OPTS to appropriate version. MAVEN_OPTS = -Xmx1024m -XX:MaxPermSize=256m is a good starting point. If you see problems, increase JVM heap with -Xmx1536m.
+4. From version **5.5.0.0** we're using **NodeJS** which needs to be at least 0.10.x, so make sure you have it and if not, please upgrade node and npm as well. For mobile development, 0.10.20 is the minimal version that Titanium requires, so bets to grab latest version available. 
 
 ##Usage
 
